--- a/CursoSpring/src/main/resources/application.properties
+++ b/CursoSpring/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.thymeleaf.cache=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.excluded-view-names= #Comma-separated list of view names (patterns allowed) that should be excluded from resolution.
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.prefix= classpath:/templates/
+spring.thymeleaf.render-hidden-markers-before-checkboxes=false
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.servlet.produce-partial-output-while-processing=true
+spring.thymeleaf.suffix=.html
